--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "devDependencies": {
         "jasmine-node":"",
-        "browserify": ">=2.7.1"
+        "browserify": "~2.7.1"
     },
     "scripts": {
         "test": "jasmine-node specs/"
