--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ktbr",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "inline ye compiled templates with browserify and the knights-templar module",
     "main": "index.js",
     "dependencies": {
@@ -12,14 +12,14 @@
     },
     "devDependencies": {
         "mocha":"~1.8.2",
-        "browserify": "~2.7.1"
+        "browserify": ">=2.8"
     },
     "scripts": {
         "test": "mocha ./test/*.js"
     },
     "repository": {
         "type": "git",
-        "url": "git://github.com/andyperlitch/knights-templar-br.git"
+        "url": "git://github.com/andyperlitch/ktbr.git"
     },
     "keywords": [
         "browserify",
